--- a/WWDC.xcodeproj/xcshareddata/xcschemes/Get Schwifty.xcscheme
+++ b/WWDC.xcodeproj/xcshareddata/xcschemes/Get Schwifty.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B519F6931E8BEDB000DC9871"
-               BuildableName = "WWDC.app"
-               BlueprintName = "WWDC"
+               BuildableName = "Get Schwifty.app"
+               BlueprintName = "Get Schwifty"
                ReferencedContainer = "container:WWDC.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B519F6931E8BEDB000DC9871"
-            BuildableName = "WWDC.app"
-            BlueprintName = "WWDC"
+            BuildableName = "Get Schwifty.app"
+            BlueprintName = "Get Schwifty"
             ReferencedContainer = "container:WWDC.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -56,8 +56,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B519F6931E8BEDB000DC9871"
-            BuildableName = "WWDC.app"
-            BlueprintName = "WWDC"
+            BuildableName = "Get Schwifty.app"
+            BlueprintName = "Get Schwifty"
             ReferencedContainer = "container:WWDC.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -75,8 +75,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B519F6931E8BEDB000DC9871"
-            BuildableName = "WWDC.app"
-            BlueprintName = "WWDC"
+            BuildableName = "Get Schwifty.app"
+            BlueprintName = "Get Schwifty"
             ReferencedContainer = "container:WWDC.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
