--- a/GetSchwifty.xcodeproj/xcshareddata/xcschemes/Get Schwifty.xcscheme
+++ b/GetSchwifty.xcodeproj/xcshareddata/xcschemes/Get Schwifty.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "30FBF2281ECC3DB2005E8D22"
+               BuildableName = "Get SchwiftyTests.xctest"
+               BlueprintName = "Get SchwiftyTests"
+               ReferencedContainer = "container:GetSchwifty.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
